# TogglSync

./: .gitignore  Cargo.toml  README.md
src/: main.rs  sync.rs  utils.rs
src/credentials/: mod.rs
src/storage/: credentials.rs  keys.rs  mod.rs
src/tempo/: mod.rs  service.rs  structs.rs
src/toggl/: issue_completer.rs  mod.rs  service.rs  structs.rs
