[package]
name = "toggl_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
# dialoguer = "0.10.3"
anyhow = "1.0.69"
savefile="0.12"
savefile-derive="0.12"
humantime = "2.1.0"
chrono = "0.4.23"
inquire = "0.5.3"